--- a/src/wifi-users.html
+++ b/src/wifi-users.html
@@ -132,7 +132,7 @@
                 <td colspan="2">No blocked user yet.</td>
               </tr>
               <tr ng-repeat="mac in $ctrl.blockListed">
-                <td>{{mac}}</td>
+                <td>{{mac | macaddress}}</td>
                 <td>
                   <button ng-click="$ctrl.unblockUser(mac)" class="btn btn-warning btn-xs">
                     Unblock
