--- a/src/wifi-users.html
+++ b/src/wifi-users.html
@@ -80,7 +80,7 @@
               <tr ng-repeat="c in $ctrl.clients | filter:$ctrl.searchText | orderBy:$ctrl.sortAttr">
                 <td>{{c.hostname}}</td>
                 <td>{{c.ip_address || 'unreachable'}}</td>
-                <td>{{c.mac_address | macaddress}}</td>
+                <td style="word-break: keep-all;">{{c.mac_address | macaddress}}</td>
                 <td>{{c.remaining_time > 0 ? (c.status === 'connected' ? (c.ip_address? 'connected' : 'disconnected') : 'paused' ): 'disconnected'}}</td>
                 <td>{{c.remaining_time | datetimeToNow:'short'}}</td>
                 <td>{{c.bandwidth_down}}kbps</td>
@@ -132,7 +132,7 @@
                 <td colspan="2">No blocked user yet.</td>
               </tr>
               <tr ng-repeat="mac in $ctrl.blockListed">
-                <td>{{mac | macaddress}}</td>
+                <td style="word-break: keep-all;">{{mac | macaddress}}</td>
                 <td>
                   <button ng-click="$ctrl.unblockUser(mac)" class="btn btn-warning btn-xs">
                     Unblock
