--- a/src/wifi-users.html
+++ b/src/wifi-users.html
@@ -81,8 +81,8 @@
                 <td>{{c.hostname}}</td>
                 <td>{{c.ip_address || 'unreachable'}}</td>
                 <td class="no-word-break" style="word-break: keep-all;">{{c.mac_address | macaddress}}</td>
-                <td ng-class="{'text-success': c.is_time_running}">{{c.remaining_time > 0 ? (c.status === 'connected' ? (c.ip_address? 'connected' : 'disconnected') : 'paused' ): 'disconnected'}}</td>
-                <td>{{c.remaining_time | datetimeToNow:'short'}}</td>
+                <td>{{c.remaining_time > 0 ? (c.status === 'connected' ? (c.ip_address? 'connected' : 'disconnected') : 'paused' ): 'disconnected'}}</td>
+                <td ng-class="{'text-success': c.is_time_running, 'text-danger': !c.is_time_running}">{{c.remaining_time | adotime:'short'}}</td>
                 <td>{{c.bandwidth_down}}kbps</td>
                 <td>{{c.bandwidth_up}}kbps</td>
                 <td>
