auto continue time v1.1.6

--- a/src/edit_customer_time_modal/edit_customer_time_modal.html
+++ b/src/edit_customer_time_modal/edit_customer_time_modal.html
@@ -48,6 +48,18 @@
       </div>
     </div>
 
+    <div ng-class="{'has-success' : auto_continue_time}">
+      <div class="checkbox">
+        <label class="custom-checkbox">
+          <input type="checkbox" name="auto_continue_time" ng-model="auto_continue_time">
+          <span>
+            Auto continue time after reboot/shutdown?
+          </span>
+        </label>
+      </div>
+    </div>
+
+
     <hr>
     <h4>Cookie Authentication</h4>
 
